# Lab11

./: CMakeLists.txt  README.md  main.cpp  tests.cpp  whattotest.cpp  whattotest.h
.github/workflows/: cmake-single-platform.yml
